--- a/estilos.css
+++ b/estilos.css
@@ -31,4 +31,5 @@ body{
     grid-area: content;
     width: 100%;
     background: linear-gradient(90deg, rgba(245,244,244,1) 0%, rgba(237,254,235,1) 100%);
+    box-shadow: inset 10px 10px 29px -2px rgba(35,35,35,0.20);
 }
